--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,12 +9,12 @@ management:
       exposure:
         include: [ 'prometheus' ]
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka/}
+# eureka:
+#   client:
+#     register-with-eureka: true
+#     fetch-registry: true
+#     service-url:
+#       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka/}
 
 store:
   jwt:
