--- a/k8s/auth.yaml
+++ b/k8s/auth.yaml
@@ -16,8 +16,10 @@ spec:
       containers:
       - name: auth
         image: fernandowi55/auth:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
+
       
 ---
 apiVersion: v1
