colocando kubectl no jenkinsfile

--- a/k8s/auth.yaml
+++ b/k8s/auth.yaml
@@ -22,7 +22,7 @@ spec:
         - containerPort: 8080
         env:
         - name: eureka.client.service-url.defaultZone
-          value: http://10.100.110.190:8761/eureka/
+          value: http://10.100.65.157:8761/eureka/
 
       
 ---
@@ -36,6 +36,8 @@ spec:
   ports:
     - protocol: TCP
       port: 8080
+      targetPort: 8080
+  type: LoadBalancer
     
   
      
